--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -165,11 +165,11 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title">Chi tiết sản phẩm</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" id="close"
                                         aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <span class="fs-5">Thông tin <i class='bx bx-edit-alt' id="edit-attri"></i></span>
+                                <span class="fs-5">Thông tin <i class='bx bx-edit-alt cursor-pointer' id="edit-attri"></i></span>
                                 <div class="table-responsive">
                                     <table class="table" id="table-detail-modal">
                                         <tbody class="table-border-bottom-0">
