--- a/webBanTiVi/src/main/resources/templates/user/page/profile/profile.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/profile.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="d-inline-block mx-3">
-                <img th:src="@{'/image/'+${#authentication.principal.avatar}}" alt="" id="avatar"
+                <img th:src="@{'/image/product/'+${#authentication.principal.avatar}}" alt="" id="avatar"
                      class="w-px-200 h-px-200 rounded-circle avatar">
                 <input type="file" hidden accept="image/" id="avatarUpload" name="image">
             </div>
