--- a/webBanTiVi/src/main/resources/templates/user/page/home/home.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/home/home.html
@@ -27,16 +27,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 h-50" src="/image/aaa.png" alt="First slide">
+                <img class="d-block w-100 h-50" src="/image/230214-G3-category-1600x600.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/image/13t-1200x375.png" alt="Second slide">
+                <img class="d-block w-100" src="/image/2023-ltv-oled-lineup-banner-1600.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/image/1200x375-samsung-021023.jpg" alt="Third slide">
+                <img class="d-block w-100" src="/image/2023-ltv-uhd-banner-1600x600.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/image/frame-3.png" alt="Four slide">
+                <img class="d-block w-100" src="/image/2023-ltv-nanocell-banner-1600x600.jpg" alt="Four slide">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -49,9 +49,9 @@
         </button>
     </div>
 </div>
-<section>
-    <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
-</section>
+<!--<section>-->
+<!--    <img class="d-block w-100" src="/image/230214-G3-category-1600x600.jpg" alt="Second slide">-->
+<!--</section>-->
 <section class="container-xxl" th:if="${#lists.size(listTivi)>0}">
     <div class="mb-4">
         <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
@@ -133,6 +133,9 @@
             </button>
         </div>
     </div>
+</section>
+<section>
+    <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
 </section>
 <section class="container-xxl" th:if="${#lists.size(listPhuKien)>0}">
     <div class="mb-4">
