--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
@@ -1,5 +1,5 @@
 
-<section class="mt-4 ">
+<section class="mt-4 container-xl">
     <div class="mb-2">
         <div>
             <span class="fs-5">Chi tiết đơn hàng #[(${bill.code})] - <span class="text-success" th:text="${bill.billStatus.status}"></span></span>
