--- a/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
@@ -8,7 +8,7 @@
     }
 
 </style>
-<section>
+<section class="container-xl">
     <div class="nav-align-left mb-4">
         <div class="tab-content col-lg-9">
             <div class="tab-pane fade show active " id="navs-top-profile" role="tabpanel">
