--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/refuse_bill_return.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/refuse_bill_return.html
@@ -43,7 +43,7 @@
                     <tbody class="table-border-bottom-0 text-left">
                     <tr th:each="billReturn : ${listRefuse}">
                         <td>1</td>
-                        <td>[(${billReturn.bill.id})]</td>
+                        <td>[(${billReturn.bill.code})]</td>
                         <td>[(${billReturn.product.product.nameProduct})]</td>
                         <td>[(${billReturn.note})]</td>
                         <td>[(${billReturn.reason})]</td>
