--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -35,6 +35,11 @@
                         <div>Danh sách sản phẩm</div>
                     </a>
                 </li>
+                <li th:class="${#strings.equals(session.active,'/product/attributes')?'menu-item active':'menu-item'}">
+                    <a th:href="@{/admin/attributes/list}" class="menu-link">
+                        <div>Danh sách thuộc tính</div>
+                    </a>
+                </li>
             </ul>
         </li>
         <li th:class="${#strings.contains(session.active,'/bill')?'menu-item active open':'menu-item'}">
