oanh thêm bảng brand, thêm thuộc tính active cho evaluate, field

--- a/webBanTiVi/src/main/resources/templates/user/page/product/tivi.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/tivi.html
@@ -3,7 +3,9 @@
     <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
 </section>
 <div class="container-xl">
-    <section class=" mt-4">
+
+
+    <section class="mt-4">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb breadcrumb-style1">
                 <li class="breadcrumb-item">
@@ -12,6 +14,21 @@
                 <li class="breadcrumb-item active">Tivi</li>
             </ol>
         </nav>
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="row  mb-3">
+                    <div class="col"></div>
+                    <div class="col">
+                    </div>
+                </div>
+                <div class="row justify-content-between">
+                    <div class="col"></div>
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
             <div class="col" th:each="tivi,Stat:${listTivi}">
                 <div class="card h-100 item-product">
