--- a/webBanTiVi/src/main/resources/templates/user/page/home/home.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/home/home.html
@@ -23,7 +23,7 @@
 
 </style>
 
-<div id="bannerUnderMenu" class="carousel slide mb-5" data-bs-ride="carousel">
+<div id="bannerUnderMenu" class="carousel slide mb-5">
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -52,6 +52,79 @@
 <!--<section>-->
 <!--    <img class="d-block w-100" src="/image/230214-G3-category-1600x600.jpg" alt="Second slide">-->
 <!--</section>-->
+<section class="container-xxl" th:if="${#lists.size(listTopRate)>0}">
+    <div class="mb-4">
+        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
+                class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Sản phẩm nổi
+            bật</h3>
+        </div>
+        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+            <div class="col" th:each="topRate,Stat:${listTopRate}">
+                <div class="card h-100 item-product">
+                    <div class="card-body mb-4 mt-3">
+                        <img class="img-fluid d-flex mx-auto my-4"
+                             th:src="|/image/product/${topRate.image}|"
+                             alt="Hình ảnh bị lỗi"/>
+                        <a th:href="@{'/product/detail/'+${topRate.id}}"
+                           class="stretched-link mb-2 text-black">
+                                            <span class="fs-5 card-title"
+                                                  th:text="${topRate.nameProduct}">
+                                                        </span></a>
+                        <div th:if="${topRate.price!=0}"><span class="text-strike-through fs-6 "> [(${topRate.price})]<small
+                                class="align-text-top">đ</small></span>
+                        </div>
+                        <div><span class="text-danger fs-6 fw-bold"
+                        >[(${#numbers.formatDecimal(topRate.reduceMoney,0,'COMMA',0,'POINT')})] <small
+                                class="align-text-top">đ</small></span>
+                        </div>
+                        <div>
+                            <span>[(${topRate.point})]<i class='bx bxs-star' style='color:#fee500'></i>([(${topRate.quantityEvalute})])</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
+</section>
+<section class="container-xxl" th:if="${#lists.size(listNewProduct)>0}">
+    <div class="mb-4">
+        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
+                class="header col text-center bg-white pt-2 pb-2 title px-3 text-uppercase fw-bold">Sản phẩm mới</h3>
+        </div>
+        <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 g-4">
+            <div class="col" th:each="newProduct,Stat:${listNewProduct}">
+                <div class="card h-100 item-product">
+                    <div class="card-body mb-4 mt-3">
+                        <img class="img-fluid d-flex mx-auto my-4"
+                             th:src="|/image/product/${newProduct.image}|"
+                             alt="Hình ảnh bị lỗi"/>
+                        <a th:href="@{'/product/detail/'+${newProduct.id}}"
+                           class="stretched-link mb-2 text-black">
+                                            <span class="fs-5 card-title"
+                                                  th:text="${newProduct.nameProduct}">
+                                                        </span></a>
+                        <div th:if="${newProduct.price!=0}"><span class="text-strike-through fs-6 "> [(${newProduct.price})]<small
+                                class="align-text-top">đ</small></span>
+                        </div>
+                        <div><span class="text-danger fs-6 fw-bold"
+                        >[(${#numbers.formatDecimal(newProduct.reduceMoney,0,'COMMA',0,'POINT')})] <small
+                                class="align-text-top">đ</small></span>
+                        </div>
+                        <div>
+                            <span>[(${newProduct.point})]<i class='bx bxs-star' style='color:#fee500'></i>([(${newProduct.quantityEvalute})])</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
+</section>
 <section class="container-xxl" th:if="${#lists.size(listTivi)>0}">
     <div class="mb-4">
         <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3"><h3
