oanh sửa code thêm mới sản phẩm

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
@@ -191,9 +191,11 @@
                         <span class="fst-italic text-danger sku-code-error"></span>
                     </div>
                     <div class="mb-3 col">
-                        <label class="form-label">Sản phẩm tương tự</label>
-                        <input class="form-control" id="sameProduct" placeholder="Để trống nếu không có">
-                        <span class="fst-italic text-danger same-product-error"></span>
+                        <label class="form-label">Hãng</label>
+                        <select class="form-select select2" id="select-brand">
+                            <option></option>
+                        </select>
+                        <span class="fst-italic text-danger group-error"></span>
                     </div>
                 </div>
             </div>
