--- a/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
@@ -1,54 +1,170 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <div class="content-wrapper">
     <!-- Content -->
-
-    <div class="container-xxl flex-grow-1 container-p-y">
-        <div class="row">
-            <div class="col-lg-2 mb-4 order-0"></div>
-            <div class="col-lg-8 mb-4 order-0">
-                <div class="card">
-                    <div class="d-flex align-items-end row">
-                        <div class="card-header">
-                            <div class="col-md-12 col-xl-12">
-                                <div class="card bg-primary  text-white mb-3">
-                                    <div class="card-body">
-                                        <i class='bx bxs-party' style='color:#15f30c'></i>
-                                        <h5 class="card-title text-white" style="color: black; text-align: center">ĐẶT
-                                            HÀNG
-                                            THÀNH
-                                            CÔNG</h5>
+    <form th:action="@{/confirm}" method="get" th:object="${listBill}">
+        <div class="container-xxl flex-grow-1 container-p-y">
+            <div class="row">
+                <div class="col-lg-2 mb-4 order-0"></div>
+                <div class="col-lg-8 mb-4 order-0">
+                    <div class="card">
+                        <div class="d-flex align-items-end row">
+                            <div class="card-header">
+                                <div class="col-md-12 col-xl-12">
+                                    <div class="card bg-primary text-white mb-3">
+                                        <div class="card-body">
+                                            <i class="bx bxs-party" style="color: #15f30c"></i>
+                                            <h5
+                                                    class="card-title text-white"
+                                                    style="color: black; text-align: center"
+                                            >
+                                                ĐẶT HÀNG THÀNH CÔNG
+                                            </h5>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="card-body">
-                            <span>Cảm Ơn Quý Khách Đã Đặt Hàng Của Big6 Store</span>
-                            <div class="col-md-12 col-xl-12" th:each="cus: ${listCus}">
-                                <div class="card bg-secondary text-white mb-3">
-                                    <div class="card-header" th:each="id: ${cus.listBill}">ĐƠN HÀNG: <span
-                                            th:text="${id.code}"></span></div>
-                                    <div class="card-body">
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <span class="text-center">Cảm Ơn Quý Khách Đã Đặt Hàng Của Big6 Store</span>
+                                </div>
+                                <div class="col-md-12 col-xl-12">
+                                    <div class="card shadow-none bg-transparent border border-primary mb-3">
+                                        <input th:value="${id}" name="id" hidden/>
+                                        <div class="card-header">
+                                            ĐƠN HÀNG: <span th:text="${code}"></span>
+                                        </div>
+                                        <div class="card-body">
+                    <span>
+                      <b>Tổng Tiền: </b>
+                      <p th:name="totalPrice"></p
+                      ></span>
+
+                                            <br/>
+                                            <span th:each="pay: ${paymentMethod}">
+                      <b>Phương Thức Thanh Toán: </b>
+                      <p th:text="${pay.paymentMethod}"></p
+                      ></span>
+
+                                            <br/>
                                             <span>
-                                                <b>Người nhận hàng: </b><p th:text="${cus.username}"></p>,
-                                                <p th:text="${cus.phoneNumber}"></p>, <p th:text="${cus.email}"></p>
-                                            </span>
-                                        <br>
-                                        <span>
-                                                <b>Giao: </b> <p th:text="${cus.address}"></p>
-                                        </span>
-                                        <br>
-                                        <span>
-                                                <b>Tổng tiền: 1000000 </b>
-                                        </span>
+                      <b>Trạng Thái Thanh Toán: </b>
+                      <p th:text="${paymentStatus}"></p
+                      ></span>
+
+                                            <br/>
+                                            <span>
+                      <b>Voucher: </b>
+                      <p th:text="${voucherValue}"></p
+                      ></span>
+
+                                            <br/>
+                                            <!--                                        <span>-->
+                                            <!--                      <b>Sản Phẩm: </b>-->
+                                            <!--                      <p th:text="${cus.billProducts}"></p>-->
+                                            <!--                    </span>-->
+                                        </div>
                                     </div>
+                                </div>
+                                <div class="mb-3 table-responsive">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                        <tr>
+                                            <th>Sản phẩm</th>
+                                            <th>Giá (VNĐ)</th>
+                                            <th>Số lượng</th>
+                                            <th>Thành tiền (VNĐ)</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr th:each="item,itemStat:${session.list}">
+                                            <input
+                                                    th:value="${item.product.id}"
+                                                    name="id"
+                                                    hidden
+                                            />
+                                            <td>
+                                                <div class="mb-3">
+                                                    <img
+                                                            th:each="image:${item.product.listImage}"
+                                                            th:if="${image.location == true}"
+                                                            th:src="@{'/image/product/'+${image.link}}"
+                                                            alt=""
+                                                            width="100px"
+                                                    />
+                                                </div>
+                                                <span
+                                                        th:text="${item.product.product.nameProduct}"
+                                                ></span>
+                                                <div>
+                                                    [
+                                                    <span
+                                                            th:each="field:${item.product.fieldList}"
+                                                            th:text="|${field.value} |"
+                                                    ></span
+                                                    >]
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <!--                                                        <div-->
+                                                <!--                                                                th:if="${reduceMoney[itemStat.index]!=item.product.priceExport}"-->
+                                                <!--                                                        >-->
+                                                <!--                                <span-->
+                                                <!--                                        class="fs-5 text-strike-through"-->
+                                                <!--                                        th:text="|${#numbers.formatDecimal(item.product.priceExport,0,'COMMA',0,'POINT')}|"-->
+                                                <!--                                ></span>-->
+                                                <!--                                                        </div>-->
+                                                <!--                                                        <div>-->
+                                                <!--                                                            <div-->
+                                                <!--                                                                    th:if="${reduceMoney[itemStat.index]!=item.product.priceExport}"-->
+                                                <!--                                                            >-->
+                                                <!--                                  <span class="fs-4" name="reducedMoney"-->
+                                                <!--                                  >[(${#numbers.formatDecimal(reduceMoney[itemStat.index],0,'COMMA',0,'POINT')})]</span-->
+                                                <!--                                  >-->
+                                                <!--                                                            </div>-->
+                                                <!--                                                            <div-->
+                                                <!--                                                                    th:if="${reduceMoney[itemStat.index]==item.product.priceExport}"-->
+                                                <!--                                                            >-->
+                                                <!--                                  <span-->
+                                                <!--                                          class="fs-4"-->
+                                                <!--                                          name="reducedMoney"-->
+                                                <!--                                          th:text="|${#numbers.formatDecimal(item.product.priceExport,0,'COMMA',0,'POINT')}|"-->
+                                                <!--                                  ></span>-->
+                                                <!--                                                            </div>-->
+                                                <!--                                                        </div>-->
+                                            </td>
+                                            <td>
+                                                <input
+                                                        aria-label="quantity"
+                                                        name="qty"
+                                                        class="form-control"
+                                                        th:value="${item.quantity}"
+                                                        hidden="hidden"
+                                                />
+                                                <span
+                                                        class="fs-4"
+                                                        th:text="${item.quantity}"
+                                                ></span>
+                                            </td>
+                                            <td>
+                              <span class="fs-4 total-price"
+                              >[(${#numbers.formatDecimal(reduceMoney[itemStat.index]*
+                                item.quantity,0,'COMMA',0,'POINT')})]</span
+                              >
+                                            </td>
+                                        </tr>
+                                        <hr/>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-2 mb-4 order-0"></div>
             </div>
-            <div class="col-lg-2 mb-4 order-0"></div>
         </div>
-    </div>
-    <!-- / Content -->
-    <div class="content-backdrop fade"></div>
+        <!-- / Content -->
+        <div class="content-backdrop fade"></div>
+    </form>
 </div>
+</html>
