--- a/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="content-wrapper">
     <!-- Content -->
-    <form th:action="@{/confirm}" method="get" th:object="${listBill}">
+    <form th:action="@{/confirm}" method="get" th:object="${session.listBill}">
         <div class="container-xxl flex-grow-1 container-p-y">
             <div class="row">
                 <div class="col-lg-2 mb-4 order-0"></div>
@@ -29,39 +29,41 @@
                                 </div>
                                 <div class="col-md-12 col-xl-12">
                                     <div class="card shadow-none bg-transparent border border-primary mb-3">
-                                        <input th:value="${id}" name="id" hidden/>
                                         <div class="card-header">
-                                            ĐƠN HÀNG: <span th:text="${code}"></span>
+                                            <span class="text-center">Thông tin hóa đơn</span>
+                                        </div>
+                                        <div class="card-body">
+                                            <b>ĐƠN HÀNG: </b><span th:text="*{code}"></span>
                                         </div>
                                         <div class="card-body">
                     <span>
                       <b>Tổng Tiền: </b>
-                      <p th:name="totalPrice"></p
+                      <p th:text="*{totalPrice}"></p
                       ></span>
 
                                             <br/>
-                                            <span th:each="pay: ${paymentMethod}">
+                                            <span>
                       <b>Phương Thức Thanh Toán: </b>
-                      <p th:text="${pay.paymentMethod}"></p
+                      <p th:text="*{paymentMethod.paymentMethod}"></p
                       ></span>
 
                                             <br/>
                                             <span>
                       <b>Trạng Thái Thanh Toán: </b>
-                      <p th:text="${paymentStatus}"></p
+                      <p th:text="*{paymentStatus}"></p
                       ></span>
 
                                             <br/>
                                             <span>
                       <b>Voucher: </b>
-                      <p th:text="${voucherValue}"></p
+                      <p th:text="*{voucherValue}"></p
                       ></span>
 
                                             <br/>
-                                            <!--                                        <span>-->
-                                            <!--                      <b>Sản Phẩm: </b>-->
-                                            <!--                      <p th:text="${cus.billProducts}"></p>-->
-                                            <!--                    </span>-->
+                                            <!--                                            <span>-->
+                                            <!--                                                                  <b>Sản Phẩm: </b>-->
+                                            <!--                                                                  <p th:text="*{billProducts.product}"></p>-->
+                                            <!--                                                                </span>-->
                                         </div>
                                     </div>
                                 </div>
@@ -76,17 +78,17 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr th:each="item,itemStat:${session.list}">
+                                        <tr th:each="item,itemStat:*{session.listBillPro}">
                                             <input
-                                                    th:value="${item.product.id}"
+                                                    th:value="*{item.product.id}"
                                                     name="id"
                                                     hidden
                                             />
                                             <td>
                                                 <div class="mb-3">
                                                     <img
-                                                            th:each="image:${item.product.listImage}"
-                                                            th:if="${image.location == true}"
+                                                            th:each="image:*{item.product.listImage}"
+                                                            th:if="*{image.location == true}"
                                                             th:src="@{'/image/product/'+${image.link}}"
                                                             alt=""
                                                             width="100px"
